Deleted unncessary code, reorganized code, and added profile.html

--- a/Availabilities (seek help).html
+++ b/Availabilities (seek help).html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Availabilities</title>
 
-    <meta name="comp1800 boilerplate code" content="Availabilities">
+    <meta name="comp1800 BBY-02" content="Availabilities page">
     <meta name="author" content="BBY02">
 
     <!-- Required meta tags -->
@@ -37,7 +37,7 @@
             margin: 0px;
             background-color: rgb(6, 78, 66);
             background-image: linear-gradient(#0F2027, #203A43, #2C5364);
-            height: 100%;
+            height: 110%;
         }
 
 
@@ -66,7 +66,7 @@
 
         table td {
             width: 600px;
-            height: 25px;
+            height: 20px;
             text-align: center;
             vertical-align: middle;
             background-color: #ccc;
@@ -81,7 +81,7 @@
 
         .tableTime {
             width: 600px;
-            height: 25px;
+            height: 20px;
             text-align: center;
             vertical-align: middle;
             background-color: rgb(112, 112, 112);
@@ -95,41 +95,34 @@
 <body>
 
     <!------------------------------------>
-    <!-- Your own HTML layout goes here -->
+    <!----------HTML layout goes here----->
     <!------------------------------------>
 
     <div class="container">
 
         <br>
-        <br>
-
-        <br>
-        <br>
 
         <header class="headerset">
             <h1>Availability</h1>
-            <center>
-                <hr style="width: 90%;">
-            </center>
+            <hr style="width: 90%;">
         </header>
 
-        <br>
         <br>
 
 
         <table cellpadding="20" cellspacing="0" id="our_table">
-            <tr Class="tableTime">
-                <td Class="tableTime"></td>
-                <td Class="tableTime">Monday</td>
-                <td Class="tableTime">Tuesday</td>
-                <td Class="tableTime">Wednesday</td>
-                <td Class="tableTime">Thursday</td>
-                <td Class="tableTime">Friday</td>
-                <td Class="tableTime">Saturday</td>
-                <td Class="tableTime">Sunday</td>
+            <tr class="tableTime">
+                <td class="tableTime"></td>
+                <td class="tableTime">Monday</td>
+                <td class="tableTime">Tuesday</td>
+                <td class="tableTime">Wednesday</td>
+                <td class="tableTime">Thursday</td>
+                <td class="tableTime">Friday</td>
+                <td class="tableTime">Saturday</td>
+                <td class="tableTime">Sunday</td>
             </tr>
             <tr>
-                <td Class="tableTime">8:00-9:00AM</td>
+                <td class="tableTime">8:00-9:00AM</td>
                 <td id="M800"></td>
                 <td id="T800"></td>
                 <td id="W800"></td>
@@ -139,7 +132,7 @@
                 <td id="Su800"></td>
             </tr>
             <tr>
-                <td Class="tableTime">9:00-10:00AM</td>
+                <td class="tableTime">9:00-10:00AM</td>
                 <td id="M900"></td>
                 <td id="T900"></td>
                 <td id="W900"></td>
@@ -150,7 +143,7 @@
             </tr>
 
             <tr>
-                <td Class="tableTime">10:00-11:00AM</td>
+                <td class="tableTime">10:00-11:00AM</td>
                 <td id="M1000"></td>
                 <td id="T1000"></td>
                 <td id="W1000"></td>
@@ -160,7 +153,7 @@
                 <td id="Su1000"></td>
             </tr>
             <tr>
-                <td Class="tableTime">11:00-12:00PM</td>
+                <td class="tableTime">11:00-12:00PM</td>
                 <td id="M1100"></td>
                 <td id="T1100"></td>
                 <td id="W1100"></td>
@@ -170,7 +163,7 @@
                 <td id="Su1100"></td>
             </tr>
             <tr>
-                <td Class="tableTime">1:00-2:00PM</td>
+                <td class="tableTime">1:00-2:00PM</td>
                 <td id="M1200"></td>
                 <td id="T1200"></td>
                 <td id="W1200"></td>
@@ -180,7 +173,7 @@
                 <td id="Su1200"></td>
             </tr>
             <tr>
-                <td Class="tableTime">2:00-3:00PM</td>
+                <td class="tableTime">2:00-3:00PM</td>
                 <td id="M1300"></td>
                 <td id="T1300"></td>
                 <td id="W1300"></td>
@@ -190,7 +183,7 @@
                 <td id="Su1300"></td>
             </tr>
             <tr>
-                <td Class="tableTime">3:00-4:00PM</td>
+                <td class="tableTime">3:00-4:00PM</td>
                 <td id="M1400"></td>
                 <td id="T1400"></td>
                 <td id="W1400"></td>
@@ -200,7 +193,7 @@
                 <td id="Su1400"></td>
             </tr>
             <tr>
-                <td Class="tableTime">4:00-5:00PM</td>
+                <td class="tableTime">4:00-5:00PM</td>
                 <td id="M1500"></td>
                 <td id="T1500"></td>
                 <td id="W1500"></td>
@@ -210,7 +203,7 @@
                 <td id="Su1500"></td>
             </tr>
             <tr>
-                <td Class="tableTime">5:00-6:00PM</td>
+                <td class="tableTime">5:00-6:00PM</td>
                 <td id="M1600"></td>
                 <td id="T1600"></td>
                 <td id="W1600"></td>
@@ -219,8 +212,6 @@
                 <td id="S1600"></td>
                 <td id="Su1600"></td>
             </tr>
-
-
         </table>
 
         <br>
@@ -230,11 +221,7 @@
             <a href="postDetails.html">
                 <button type="button" class="btn btn-lg btn-primary pull-right">Back </button>
             </a>
-            &nbsp; &nbsp; &nbsp;
-            <!-- <a href="missionPosted.html">
-                <button id="button" type="button" class="btn btn-lg btn-primary pull-right" onclick="saveToggles()"> Post  </button>
-            </a> -->
-            
+            &nbsp; &nbsp; &nbsp;        
             <button id="postButton" type="button" class="btn btn-lg btn-primary pull-right"> Post </button>
             
         </div>
@@ -252,7 +239,9 @@
             <a href="missionBoard.html">
                 <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
             </a>
-            <i class="material-icons">settings</i>
+            <a href="profile.html">
+                <i class="material-icons">account_circle</i>
+            </a>
         </footer>
 
 
@@ -268,11 +257,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script>
 
-
-
-        //document.getElementsByClassName(isHighlighted)
-
-
+        //listen for mouse clicks on the table
         $(function () {
             var isMouseDown = false,
                 isHighlighted;
@@ -296,21 +281,7 @@
                 });
         });
 
-
-
-
-        // function saveToggles(postid) {
-        //     //get all the toggled divs into an array
-        //     var toggles = ["M800", "M900", "M1000", "W800", "W900", "W1000", "F800", "F900", "F1000"];
-        //     toggles.forEach(item => {
-        //         console.log(item);
-        //         db.collection("posts").doc(postid).set({
-        //             availability: firebase.firestore.FieldValue.arrayUnion(item)
-        //         }, { merge: true });
-        //     })
-        // }
-        // saveToggles("pmsMtRGt4BXHM764oqIjGzgd2PR2");
-
+        //add ids of toggled time slots into an array to store information of user's availability
         function saveToggles(postid, toggles) {
             //get all the toggled divs into an array
             //var toggles = ["M800", "M900", "M1000", "W800", "W900", "W1000", "F800", "F900", "F1000"];;   //get from input param
@@ -322,8 +293,6 @@
                 }, { merge: true });
             }) 
         }
-
-
 
 
         // function is always running
