--- a/missionAccepted.html
+++ b/missionAccepted.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Mission Posted!</title>
 
-    <meta name="comp1800 boilerplate code" content="Mission Posted! page">
+    <meta name="comp1800 BBY-02" content="Mission Posted! page">
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -76,12 +76,13 @@
             <a href="main.html">
                 <i class="material-icons">home</i>
             </a>
-
             <i class="material-icons">info</i>
             <a href="missionBoard.html">
                 <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
             </a>
-            <i class="material-icons">settings</i>
+            <a href="profile.html">
+                <i class="material-icons">account_circle</i>
+            </a>
         </footer>
 
 
@@ -98,6 +99,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
         </script>
+
+    <!--extra break elements added to stop repeating background-colour gradient-->
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
