--- a/missionBoard.html
+++ b/missionBoard.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Mission Board</title>
 
-    <meta name="comp1800 boilerplate code" content="Mission Board">
+    <meta name="comp1800 BBY-02" content="Mission Board Page">
     <meta name="author" content="BBY02">
 
     <!-- Required meta tags -->
@@ -144,15 +144,21 @@
             <button type="button" class="btn btn-lg btn-primary pull-right">Back </button>
         </a>
 
+        <!--extra break elements added to stop repeating background-colour gradient-->
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
         <footer class="navbar justify-content-evenly fixed-bottom">
             <a href="main.html">
                 <i class="material-icons">home</i>
             </a>
             <i class="material-icons">info</i>
-            <i class="material-icons"><span class="material-icons-two-tone">
-                    volunteer_activism
-                </span></i>
-            <i class="material-icons">settings</i>
+            <a href="missionBoard.html">
+                <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
+            </a>
+            <a href="profile.html">
+                <i class="material-icons">account_circle</i>
+            </a>
         </footer>
 
 
@@ -168,62 +174,54 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-        </script>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </script>
+
     <script>
 
+        // function read_display_title() {
+        //     db.collection("posts").doc("Event")                                                      //name of the collection and documents should matach excatly with what you have in Firestore
+        //         .onSnapshot(EventDoc => {                                                               //arrow notation
+        //             console.log("current document data: " + EventDoc.data());                          //.data() returns data object
+        //             document.getElementById("title").innerHTML = EventDoc.data().title;      //using javascript to display the data on the right place
+        //         })
+        // }
+        // read_display_title()        //calling the function
 
-        //TEST
-        //
-        //
-        //
-        function read_display_title() {
-            db.collection("posts").doc("Event")                                                      //name of the collection and documents should matach excatly with what you have in Firestore
-                .onSnapshot(EventDoc => {                                                               //arrow notation
-                    console.log("current document data: " + EventDoc.data());                          //.data() returns data object
-                    document.getElementById("title").innerHTML = EventDoc.data().title;      //using javascript to display the data on the right place
-                })
-        }
-        read_display_title()        //calling the function
-
-        function read_display_description() {
-            db.collection("posts").doc("Event")                                                      //name of the collection and documents should matach excatly with what you have in Firestore
-                .onSnapshot(EventDoc => {                                                               //arrow notation
-                    console.log("current document data: " + EventDoc.data());                          //.data() returns data object
-                    document.getElementById("description").innerHTML = EventDoc.data().Description;      //using javascript to display the data on the right place
-                    //$('#quote-goes-here').text(c.data().quote);                                       //using jquery object dot notation
-                    //$("#quote-goes-here").text(c.data()["quote"]);                                     //using json object indexing
-                })
-        }
-        read_display_description()        //calling the function
+        // function read_display_description() {
+        //     db.collection("posts").doc("Event")                                                      //name of the collection and documents should matach excatly with what you have in Firestore
+        //         .onSnapshot(EventDoc => {                                                               //arrow notation
+        //             console.log("current document data: " + EventDoc.data());                          //.data() returns data object
+        //             document.getElementById("description").innerHTML = EventDoc.data().Description;      //using javascript to display the data on the right place
+        //             //$('#quote-goes-here').text(c.data().quote);                                       //using jquery object dot notation
+        //             //$("#quote-goes-here").text(c.data()["quote"]);                                     //using json object indexing
+        //         })
+        // }
+        // read_display_description()        //calling the function
 
 
-        function read_display_hour() {
-            db.collection("posts").doc("Event")                                                      //name of the collection and documents should matach excatly with what you have in Firestore
-                .onSnapshot(EventDoc => {                                                               //arrow notation
-                    console.log("current document data: " + EventDoc.data());                          //.data() returns data object
-                    document.getElementById("hour").innerHTML = EventDoc.data().hour;      //using javascript to display the data on the right place
-                    //$('#quote-goes-here').text(c.data().quote);                                       //using jquery object dot notation
-                    //$("#quote-goes-here").text(c.data()["quote"]);                                     //using json object indexing
-                })
-        }
-        read_display_hour()        //calling the function
+        // function read_display_hour() {
+        //     db.collection("posts").doc("Event")                                                      //name of the collection and documents should matach excatly with what you have in Firestore
+        //         .onSnapshot(EventDoc => {                                                               //arrow notation
+        //             console.log("current document data: " + EventDoc.data());                          //.data() returns data object
+        //             document.getElementById("hour").innerHTML = EventDoc.data().hour;      //using javascript to display the data on the right place
+        //             //$('#quote-goes-here').text(c.data().quote);                                       //using jquery object dot notation
+        //             //$("#quote-goes-here").text(c.data()["quote"]);                                     //using json object indexing
+        //         })
+        // }
+        // read_display_hour()        //calling the function
 
 
-        function read_display_minute() {
-            db.collection("posts").doc("Event")                                                      //name of the collection and documents should matach excatly with what you have in Firestore
-                .onSnapshot(EventDoc => {                                                               //arrow notation
-                    console.log("current document data: " + EventDoc.data());                          //.data() returns data object
-                    document.getElementById("minute").innerHTML = EventDoc.data().minute;      //using javascript to display the data on the right place
-                    //$('#quote-goes-here').text(c.data().quote);                                       //using jquery object dot notation
-                    //$("#quote-goes-here").text(c.data()["quote"]);                                     //using json object indexing
-                })
-        }
-        read_display_minute()        //calling the function
+        // function read_display_minute() {
+        //     db.collection("posts").doc("Event")                                                      //name of the collection and documents should matach excatly with what you have in Firestore
+        //         .onSnapshot(EventDoc => {                                                               //arrow notation
+        //             console.log("current document data: " + EventDoc.data());                          //.data() returns data object
+        //             document.getElementById("minute").innerHTML = EventDoc.data().minute;      //using javascript to display the data on the right place
+        //             //$('#quote-goes-here').text(c.data().quote);                                       //using jquery object dot notation
+        //             //$("#quote-goes-here").text(c.data()["quote"]);                                     //using json object indexing
+        //         })
+        // }
+        // read_display_minute()        //calling the function
     </script>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 
 </html>
