--- a/missionPosted.html
+++ b/missionPosted.html
@@ -76,12 +76,13 @@
             <a href="main.html">
                 <i class="material-icons">home</i>
             </a>
-
             <i class="material-icons">info</i>
             <a href="missionBoard.html">
                 <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
             </a>
-            <i class="material-icons">settings</i>
+            <a href="profile.html">
+                <i class="material-icons">account_circle</i>
+            </a>
         </footer>
 
 
@@ -97,9 +98,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-        </script>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </script>
 </body>
 
 </html>
