--- a/viewPost.html
+++ b/viewPost.html
@@ -2,7 +2,11 @@
 <html>
 
 <head>
-
+    <meta charset="utf-8">
+    <title>viewPost</title>
+    <meta name="comp1800 BBY-02" content="viewPost Page">
+    <meta name="author" content="BBY02">
+    
     <style>
         body {
             background: linear-gradient(#0f2027, #203a43, #2c5364);
@@ -33,9 +37,6 @@
             height: 8vh;
         }
     </style>
-    <meta charset="utf-8">
-    <title>My BCIT Project</title>
-    <meta name="comp1800 template" content="Post">
 
     <!-- Optional styles and scripts of your own -->
     <link type="text/css" href="styles/my_style.css">
@@ -63,42 +64,6 @@
 </head>
 
 <body>
-
-    <!-------------------------------------->
-    <!-- The following is HTML for layout -->
-    <!-------------------------------------->
-    <!-- Navbar
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning">
-        <div class="container-fluid">
-            <a class="navbar-brand">Chris's Hiking App - Reviews</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="login.html">Login</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Navigate</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Saved</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="profile.html">Profile</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav> -->
-
-
-
     <br> <br><br> <br>
 
     <h1>Add New Post <span id="PT"></span></h1>
@@ -142,11 +107,15 @@
             <i class="material-icons">home</i>
         </a>
         <i class="material-icons">info</i>
-        <i class="material-icons"><span class="material-icons-two-tone">
-                volunteer_activism
-            </span></i>
-        <i class="material-icons">settings</i>
+        <a href="missionBoard.html">
+            <i class="material-icons"><span class="material-icons-two-tone"> volunteer_activism </span> </i>
+        </a>
+        <a href="profile.html">
+            <i class="material-icons">account_circle</i>
+        </a>
     </footer>
+
+    <!--extra break elements added to stop repeating background-colour gradient-->
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
     <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
